# muggle

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
cmake/: common_marcos.cmake
engine/: CMakeLists.txt  muggle.h
engine/foundation/filesystem/: vfs.cpp  vfs.h
engine/foundation/log/: log_system.cpp  log_system.h
engine/foundation/timer/: timer.cpp  timer.h
engine/foundation/utility/: string_utils.h
engine/modules/asset/: gltf.cpp  gltf.h
engine/modules/graphics/: device.h  gpu_enum.h  render_resource.h  texture.h
engine/modules/graphics/vulkan/: device.cpp  device.h
samples/: CMakeLists.txt
samples/3rdparty_samples/assimp/: CMakeLists.txt
samples/3rdparty_samples/assimp/src/: main.cpp
samples/3rdparty_samples/glfw/: CMakeLists.txt
samples/3rdparty_samples/glfw/src/: main.cpp
samples/3rdparty_samples/glm/: CMakeLists.txt
samples/3rdparty_samples/glm/src/: main.cpp
samples/3rdparty_samples/glslang/: CMakeLists.txt
samples/3rdparty_samples/hello_muggle/: CMakeLists.txt
samples/3rdparty_samples/hello_muggle/src/: main.cpp
samples/3rdparty_samples/imgui/: CMakeLists.txt
samples/3rdparty_samples/imgui/src/: imgui_wrapper.cpp  main.cpp
samples/vulkan/hello_triangle/: CMakeLists.txt
samples/vulkan/hello_triangle/src/: hello_triangle.cpp  hello_triangle.h  main.cpp
source/: CMakeLists.txt
